--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Donelfantastic Official</title>
-  <!--
-  <meta http-equiv="refresh" content="0; url=https://google.com">
-  -->
   <meta http-equiv="cache-control" content="max-age=0">
   <meta http-equiv="cache-control" content="no-cache">
   <meta http-equiv="expires" content="0">
@@ -42,36 +39,38 @@
   <p class="hint">DONELFANTASTIC</p>
   <nav class="nav">
     <a href="/" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/donel_1.png" class="nav__image">
+      <img src="../assets/photo/donel_1.png" class="nav__image">
 
       <span class="nav__title" data-title="home">Home</span>
       <span class="nav__subtitle">Donelfantastic</span>
     </a>
+    <!--//
     <a href="../donel-gallery" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/onstage_1.jpg" class="nav__image">
+      <img src="../assets/photo/onstage_1.jpg" class="nav__image">
       <span class="nav__title" data-title="gallery">Gallery</span>
       <span class="nav__subtitle">My Gallery</span>
     </a>
     <a href="../donel-music" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/donel_3.png" class="nav__image">
+      <img src="../assets/photo/donel_3.png" class="nav__image">
       <span class="nav__title" data-title="music">Music</span>
       <span class="nav__subtitle">My Music</span>
     </a>
     <a href="../donel-entertainment" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/onstage.png" class="nav__image">
+      <img src="../assets/photo/onstage.png" class="nav__image">
       <span class="nav__title" data-title="tv">Entertainment</span>
       <span class="nav__subtitle">Entertainment</span>
     </a>
     <a href="../donel-disclaimer" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/donel_2.png" class="nav__image">
+      <img src="//../assets/photo/donel_2.png" class="nav__image">
       <span class="nav__title" data-title="disclaimer">Disclaimer</span>
       <span class="nav__subtitle">Site Disclaimer</span>
     </a>
     <a href="../donel-about-us" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/onstage_2.jpg" class="nav__image">
+      <img src="../assets/photo/onstage_2.jpg" class="nav__image">
       <span class="nav__title" data-title="about">About</span>
       <span class="nav__subtitle">About Us</span>
     </a>
+    //-->
   </nav>
   </div>
   <div class="container-fluid"></div>
@@ -88,12 +87,6 @@
   <span style="background:#ff0000;font-size:18px;border-radius:5px 0px 0px 5px;padding:0px 10px;color:#ffffff;position:absolute;text-align:center;line-height:35px;"><i class="fa fa-cog fa-spin"></i></span>
   <marquee scrollamount="3" direction="left" onmouseover="stop()" onmouseout="start()" style="font-size:14px;font-weight:bold;text-transform: uppercase;color:white;display:block;margin-left:40px;line-height:35px;">Welcome back to Donelfantastic WEBiptv! Have any issue problems? Feel free to contact/message at Official social media. Thank you and Happy watching!</marquee>
         </div>
-       <!--//
-        <div class="df_Info" style="margin: 30px;padding:0px;border-radius:5px 5px 5px 5px;//border:1px solid #fff;">
-  <span style="position:absolute;background:#ff0000;font-size:18px;border-radius:5px 0px 0px 5px;padding:0px 15px;color:#fff;text-align:center;line-height:30px;"></span>
-  <marquee scrollamount="3" direction="left" onmouseover="stop()" onmouseout="start()" style="font-size:14px;font-weight:bold;text-transform:uppercase;color:white;display:block;line-height:30px;">Welcome back to Donelfantastic WEBiptv! Have any issue problems? Feel free to contact/message at Official social media. Thank you and Happy watching!</marquee>
-</div>
-        //-->
           <div id="display-resources" style="overflow-x: auto; padding-top: 0px; padding-left:30px;padding-right:30px;padding-bottom:75px"></div>
         </div>
       </section>
