--- a/embed/bitmov.html
+++ b/embed/bitmov.html
@@ -54,8 +54,8 @@ var config = {
     ]
   },
   source: {
-    progressive: "https://donelfantastic.github.io/webiptv/web/" + sURL,
-    poster: "" 
+    progressive: sURL,
+    // poster: "" 
   },
   tweaks: {
       file_protocol: true,
